--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
     <script>
       //Your web app's Firebase configuration
+      var firebaseConfig = {
+    apiKey: "AIzaSyBwOYFaEsQYAQuglPGxGImZaW2zxxVaGW0",
+    authDomain: "ball-game-d3e38.firebaseapp.com",
+    databaseURL: "https://ball-game-d3e38-default-rtdb.firebaseio.com",
+    projectId: "ball-game-d3e38",
+    storageBucket: "ball-game-d3e38.appspot.com",
+    messagingSenderId: "539844578063",
+    appId: "1:539844578063:web:9ba04e034f8192e456cc7a"
+  };
       
       // // Initialize Firebase
       // firebase.initializeApp(firebaseConfig);
